horizontal scroll fix

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -39,19 +39,25 @@
 
 @media screen and (max-width: 1279px) {
   .cover {
-    width: 100vw;
-    height: 62.5vw;
+    max-width: 100%;
+    max-height: 640px;
+    /* width: 100vw;
+    max-width: 100%;
+    height: calc((100vw - 17px)*0.625); */
+
   }
 }
 
 @media screen and (max-width: 1023px) {
   .cover {
     margin-top: 90px;
+    max-height: 480px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .cover {
     margin-top: 66px;
+    max-height: 200px;
   }
 }
