--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -23,7 +23,7 @@
 @media screen and (max-width: 767px) {
   .footer {
     margin: 64px 0 0 16px;
-    width: calc(100vw - 16px);
+    width: calc(100% - 16px);
     flex-direction: column;
   }
 }
